<resources>
    <string name="app_name">CardManager</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_aty">LoginAty</string>
    <string name="empty_user_name">用户名不能为空</string>
    <string name="empty_password">密码不能为空</string>
    <string name="user_name">userName</string>
    <string name="passwrod">password</string>
    <string name="main_title">桥牌叫牌规则录入系统</string>
    <string name="write_rule">录入规则</string>
    <string name="look_rule_list">查看规则列表</string>
    <string name="sync_cloud">同步到云端</string>
    <string name="title_activity_write_rule_aty">WriteRuleAty</string>
    <string name="hint_write_rule">请输入规则...</string>
    <string name="last_step">上一步</string>
    <string name="next_step">下一步</string>
    <string name="clear">清除</string>
    <string name="east">East</string>
    <string name="west">West</string>
    <string name="north">North</string>
    <string name="south">South</string>

    <string-array name="call_cards">
        <item>Pass</item>
        <item>1C</item>
        <item>1D</item>
        <item>1H</item>
        <item>1S</item>
        <item>1NT</item>
        <item>2C</item>
        <item>2D</item>
        <item>2H</item>
        <item>2S</item>
        <item>2NT</item>
        <item>3C</item>
        <item>3D</item>
        <item>3H</item>
        <item>3S</item>
        <item>3NT</item>
        <item>4C</item>
        <item>4D</item>
        <item>4H</item>
        <item>4S</item>
        <item>4NT</item>
        <item>5C</item>
        <item>5D</item>
        <item>5H</item>
        <item>5S</item>
        <item>5NT</item>
        <item>6C</item>
        <item>6D</item>
        <item>6H</item>
        <item>6S</item>
        <item>6NT</item>
        <item>7C</item>
        <item>7D</item>
        <item>7H</item>
        <item>7S</item>
        <item>7NT</item>
    </string-array>
    <string name="title_activity_look_up_rules">LookUpRules</string>
    <string name="db_name">card.db</string>
    <string name="table_name">rules</string>
    <string name="call_">call_</string>
    <string name="call_rules_">call_rules_</string>
    <string name="no_data_currently">当前无数据</string>
</resources>
