<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_title"
        android:id="@+id/tvMainTitle"
        android:textSize="25sp"
        android:textColor="#ff69ffcd"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:onClick="writeRule"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/write_rule"
        android:id="@+id/btnWriteRule"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:onClick="lookRuleList"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/look_rule_list"
        android:id="@+id/btnLookRuleList"
        android:layout_alignTop="@+id/btnWriteRule"
        android:layout_toLeftOf="@+id/btnWriteRule"
        android:layout_toStartOf="@+id/btnWriteRule"
        android:layout_marginRight="41dp"
        android:layout_marginEnd="41dp" />

    <Button
        android:onClick="syncCloud"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/sync_cloud"
        android:id="@+id/btnSyncCloud"
        android:layout_alignTop="@+id/btnWriteRule"
        android:layout_toRightOf="@+id/btnWriteRule"
        android:layout_toEndOf="@+id/btnWriteRule"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="46dp" />
</RelativeLayout>
